reference/5.1/Microsoft.PowerShell.Management/ToC.md
#  [Microsoft.PowerShell.Management](Microsoft.PowerShell.Management.md)
##  [Add-Computer](add-computer.md)
##  [Add-Content](add-content.md)
##  [Checkpoint-Computer](checkpoint-computer.md)
##  [Clear-Content](clear-content.md)
##  [Clear-EventLog](clear-eventlog.md)
##  [Clear-Item](clear-item.md)
##  [Clear-ItemProperty](clear-itemproperty.md)
##  [Clear-RecycleBin](clear-recyclebin.md)
##  [Complete-Transaction](complete-transaction.md)
##  [Convert-Path](convert-path.md)
##  [Copy-Item](copy-item.md)
##  [Copy-ItemProperty](copy-itemproperty.md)
##  [Debug-Process](debug-process.md)
##  [Disable-ComputerRestore](disable-computerrestore.md)
##  [Enable-ComputerRestore](enable-computerrestore.md)
##  [Get-ChildItem](get-childitem.md)
##  [Get-Clipboard](get-clipboard.md)
##  [Get-ComputerInfo](get-computerinfo.md)
##  [Get-ComputerRestorePoint](get-computerrestorepoint.md)
##  [Get-Content](get-content.md)
##  [Get-ControlPanelItem](get-controlpanelitem.md)
##  [Get-EventLog](get-eventlog.md)
##  [Get-HotFix](get-hotfix.md)
##  [Get-Item](get-item.md)
##  [Get-ItemProperty](get-itemproperty.md)
##  [Get-ItemPropertyValue](get-itempropertyvalue.md)
##  [Get-Location](get-location.md)
##  [Get-Process](get-process.md)
##  [Get-PSDrive](get-psdrive.md)
##  [Get-PSProvider](get-psprovider.md)
##  [Get-Service](get-service.md)
##  [Get-TimeZone](get-timezone.md)
##  [Get-Transaction](get-transaction.md)
##  [Get-WmiObject](get-wmiobject.md)
##  [Invoke-Item](invoke-item.md)
##  [Invoke-WmiMethod](invoke-wmimethod.md)
##  [Join-Path](join-path.md)
##  [Limit-EventLog](limit-eventlog.md)
##  [Microsoft.PowerShell.Management](microsoft.powershell.management.md)
##  [Move-Item](move-item.md)
##  [Move-ItemProperty](move-itemproperty.md)
##  [New-EventLog](new-eventlog.md)
##  [New-Item](new-item.md)
##  [New-ItemProperty](new-itemproperty.md)
##  [New-PSDrive](new-psdrive.md)
##  [New-Service](new-service.md)
##  [New-WebServiceProxy](new-webserviceproxy.md)
##  [Pop-Location](pop-location.md)
##  [Push-Location](push-location.md)
##  [Register-WmiEvent](register-wmievent.md)
##  [Remove-Computer](remove-computer.md)
##  [Remove-EventLog](remove-eventlog.md)
##  [Remove-Item](remove-item.md)
##  [Remove-ItemProperty](remove-itemproperty.md)
##  [Remove-PSDrive](remove-psdrive.md)
##  [Remove-WmiObject](remove-wmiobject.md)
##  [Rename-Computer](rename-computer.md)
##  [Rename-Item](rename-item.md)
##  [Rename-ItemProperty](rename-itemproperty.md)
##  [Reset-ComputerMachinePassword](reset-computermachinepassword.md)
##  [Resolve-Path](resolve-path.md)
##  [Restart-Computer](restart-computer.md)
##  [Restart-Service](restart-service.md)
##  [Restore-Computer](restore-computer.md)
##  [Resume-Service](resume-service.md)
##  [Set-Clipboard](set-clipboard.md)
##  [Set-Content](set-content.md)
##  [Set-Item](set-item.md)
##  [Set-ItemProperty](set-itemproperty.md)
##  [Set-Location](set-location.md)
##  [Set-Service](set-service.md)
##  [Set-TimeZone](set-timezone.md)
##  [Set-WmiInstance](set-wmiinstance.md)
##  [Show-ControlPanelItem](show-controlpanelitem.md)
##  [Show-EventLog](show-eventlog.md)
##  [Split-Path](split-path.md)
##  [Start-Process](start-process.md)
##  [Start-Service](start-service.md)
##  [Start-Transaction](start-transaction.md)
##  [Stop-Computer](stop-computer.md)
##  [Stop-Process](stop-process.md)
##  [Stop-Service](stop-service.md)
##  [Suspend-Service](suspend-service.md)
##  [Test-ComputerSecureChannel](test-computersecurechannel.md)
##  [Test-Connection](test-connection.md)
##  [Test-Path](test-path.md)
##  [Undo-Transaction](undo-transaction.md)
##  [Use-Transaction](use-transaction.md)
##  [Wait-Process](wait-process.md)
##  [Write-EventLog](write-eventlog.md)
